# saghat

./: .dockerignore  .env.example  .gitignore  README.md  compose.yml  conftest.py  main.py  manage.py  pyproject.toml
.github/workflows/: README.md  ci.yml  deploy.yml
apps/loans/: algorithm.py  api.py  apps.py  schemas.py
apps/loans/tests/: test_api.py
apps/payments/: schemas.py
apps/payments/migrations/: 0001_initial.py
apps/payments/tests/: test_api.py  test_models.py
apps/users/: schemas.py
apps/users/migrations/: 0001_initial.py
deploy/: Caddyfile  README.md  compose.prod.yml  setup-server.sh
docker/: .env.backend  compose.backend.yml  compose.frontend.yml  compose.prod.yml  compose.yml
docs/: AGENTS.md  SKILLS.md  architecture.md  frontend-architecture.md
saghat/: asgi.py
saghat/settings/: base.py  dev.py  prod.py
src/backend/: Dockerfile  pyproject.toml
src/backend/apps/common/: auth.py  jalali.py
src/backend/apps/loans/: admin.py  models.py
src/backend/apps/loans/migrations/: 0001_initial.py
src/backend/apps/loans/tests/: test_algorithm.py  test_models.py
src/backend/apps/payments/: admin.py  api.py  bitpin.py  models.py
src/backend/apps/users/: admin.py  api.py  models.py
src/backend/apps/users/management/commands/: setup_fund.py
src/backend/apps/users/tests/: test_api.py  test_models.py
src/backend/saghat/: urls.py  wsgi.py
src/backend/saghat/settings/: base.py
src/frontend/: Dockerfile  index.html  package-lock.json  package.json
src/frontend/src/: App.tsx
src/frontend/src/lib/: api.ts
(+9 files in other folders)
